<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    tools:context=".SignUpFragment"
    android:fitsSystemWindows="true"


    >

    <LinearLayout
        android:layout_marginTop="134dp"
        android:layout_marginHorizontal="34dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:textAlignment="textEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_extrabold"
            android:text="@string/title_signup"
            android:textSize="20sp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxStrokeErrorColor="@color/error"
            app:startIconDrawable="@drawable/identification_card"
            android:hint="@string/name"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:drawableStart="@drawable/identification_card"
                android:id="@+id/name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutemail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxStrokeErrorColor="@color/error"
            app:startIconDrawable="@drawable/email"
            android:hint="@string/email"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:drawableStart="@drawable/email"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutusername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxStrokeErrorColor="@color/error"
            app:startIconDrawable="@drawable/user"
            android:hint="@string/title_username"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:drawableStart="@drawable/user"
                android:id="@+id/username"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            app:startIconDrawable="@drawable/lock"
            android:id="@+id/layoutpassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/title_password"
            app:endIconMode="password_toggle"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:drawableStart="@drawable/lock"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <CheckBox
            android:layout_marginVertical="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sk"/>
        <Button
            android:id="@+id/btn_register"
            android:layout_marginVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom"
            android:text="@string/register"
            android:fontFamily="@font/inter_medium"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="28dp"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/slider"/>
        <TextView
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slider_signup"
            android:textSize="16sp"
            android:fontFamily="@font/inter_medium" />

    </LinearLayout>

</FrameLayout>