<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_backgound"
    tools:context=".SignInFragment"
    android:fitsSystemWindows="true"

    >
    <LinearLayout
        android:layout_marginTop="134dp"
        android:layout_marginHorizontal="34dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_extrabold"
            android:text="@string/title_signin"
            android:textSize="20sp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutusername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxStrokeErrorColor="@color/error"
            app:startIconDrawable="@drawable/user"
            android:hint="@string/title_username"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:drawableStart="@drawable/user"
                android:id="@+id/username"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            app:startIconDrawable="@drawable/lock"
            android:id="@+id/layoutpassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/title_password"
            app:endIconMode="password_toggle"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:drawableStart="@drawable/lock"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_login"
            android:layout_marginVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom"
            android:text="@string/login"
            android:fontFamily="@font/inter_medium"/>
        <TextView
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:fontFamily="@font/inter_medium"
            android:layout_marginHorizontal="15dp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/google"
        android:layout_gravity="bottom"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/login_with"/>
    <LinearLayout
        android:layout_marginBottom="28dp"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="16sp"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slider"
            android:fontFamily="@font/inter_medium" />
        <ImageView
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/outline_arrow_forward_24"
            android:contentDescription="@string/slider"/>
    </LinearLayout>
</FrameLayout>