<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsAcitvity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/jewelry_about"
        android:alpha="0.5"
        android:scaleType="fitStart"/>
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_weight="5"
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"/>
        <TextView
            android:fontFamily="@font/inter_bold"
            android:layout_weight="1"
            android:text="@string/aboutus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginVertical="20sp"
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/header_about"
            android:fontFamily="@font/inter_extrabold"
            android:textSize="20sp"/>

        <TextView
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/title_about"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"/>
         </LinearLayout>

        <LinearLayout
            android:background="@drawable/customer_custom"
            android:layout_marginTop="220dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:lineSpacingExtra="7dp"
                android:layout_marginHorizontal="38dp"
                android:layout_marginVertical="60dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_content"
                android:justificationMode="inter_word"
                android:fontFamily="@font/inter_medium" />
            <TextView
                android:layout_marginHorizontal="20sp"
                android:layout_marginVertical="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/developer"
                android:fontFamily="@font/inter_medium" />
        </LinearLayout>



</RelativeLayout>