<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermActivity">
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_weight="5"
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"/>
        <TextView
            android:fontFamily="@font/inter_bold"
            android:layout_weight="1"
            android:text="@string/term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <ScrollView
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/content1"

                android:layout_marginVertical="30dp"
                android:padding="10dp"
                android:layout_marginHorizontal="38dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/policy_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/grey"/>
                <TextView
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="5dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/policy_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:layout_below="@id/content1"
                android:layout_marginVertical="30dp"
                android:padding="10dp"
                android:layout_marginHorizontal="38dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/grey"/>
                <TextView
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="5dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/terms_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>